--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>STM32H503CBT6</name>
+	<name>Sensor_base_T_motion</name>
 	<comment></comment>
 	<projects>
 	</projects>
